updated oblique from v8 to v9

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 		<link href="assets/images/favicon.png" rel="shortcut icon" />
 	</head>
 	<body class="has-overlay">
-		<noscript>
+		<noscript class="ob-no-script">
 	<div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%)">
 		<section lang="de">
 			<strong>JavaScript ist erforderlich!</strong>
@@ -63,6 +63,7 @@
 		</section>
 	</div>
 </div>
+
 
 		<ec-root></ec-root>
 	</body>
